--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,6 +15,28 @@ eureka:
 zuul:
   routes:
     user-service: /user/**
+    stock-service: /stock/**
+    company-service: /company/**
+  host:
+    connect-timeout-millis: 60000
+    socket-timeout-millis: 60000
+    max-total-connections: 50
+    max-per-route-connections: 5
+
+hystrix:
+  command:
+    default:
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 60000
+          strategy: THREAD
+
+ribbon:
+  ReadTimeout: 60000
+  ConnectTimeout: 60000
+  MaxAutoRetries: 0
+  MaxAutoRetriesNextServer: 1
 
 smc:
-  enableAccessTokenCheck: false
+  enableAccessTokenCheck: true
