--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,7 +8,7 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://admin:123456@localhost:1000/eureka
+      defaultZone: http://admin:123456@192.168.199.244:1000/eureka
     healthcheck:
       enabled: true
 
